Fix: Font contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ header nav h2 {
 
 header nav h2 a {
     text-decoration: none;
-    color: #FF0000;
+    color: #B00909;
     font-family: 'Orbitron', sans-serif;
     font-size: 1.5rem;
 }
